--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
         <nav class="navbar">
             <div class="container">
                 <div class="navbar-brand">
-                    <a class="navbar-item has-text-weight-semibold nav-bar-menu-bg-color" href="https://oblonghq.com">
-                        <p class="is-size-4"><i class="fas fa-heart heart-pink"></i> OBLONG MEDIA</p>
+                    <a class="navbar-item has-text-weight-semibold nav-bar-menu-bg-color" href="/">
+                        <p class="is-size-4"><i class="fas fa-heart heart-pink"></i> Uh oh...</p>
                     </a>
                 </div>
             </div>
@@ -28,8 +28,7 @@
         <div class="column has-text-centered">
           <h1 class="title">Uh oh. Page not found (404)!</h1>
           <p class="subtitle">This page is no longer available. Soz.</p>
-          <a class="button" href="https://oblonghq.com">Home</a>
-          <a class="button" href="mailto:help@OblongHQ.com?Subject=404">Email Us</a>
+          <a class="button" href="/">Home</a>
         </div>
         <div class="column has-text-centered">
           <img src="/assets/img/404-robot.gif" />
@@ -39,15 +38,10 @@
   </section>
 
     <footer class="footer is-large">
-        <div class="container">
-            <div class="content has-text-centered">
-                <div class="control level-item">
-                    <a href="https://oblonghq.com">
-                        <img src="/assets/img/oblong_logo_v3_darkred_trans_185px.png" alt="Oblong Logo" >
-                    </a>
-                </div>
-            </div>
-        </div>
+        <div class="text-center mb-5">
+      Copyright Al Elliott 2005-2022.
+       
+    </div>
     </footer>
   </body>
 </html>
