--- a/book.html
+++ b/book.html
@@ -72,33 +72,15 @@
               <img src="assets/img/al-hello-3_tiny.gif" class="img-fluid" alt="Image loading...">
           </div>
           <div class="col-lg-8 col-md-8">
-            <p class="lead">Choose your favourite way to talk below, and we'll find a date/time that works for both of us.</p>
-            <ul class="list-unstyled">
-                  <li class=" mb-3">
-                      <div class="subheading mb-3">
-                          <a href="#zoom">
-                              <i class="fas fa-lg fa-video mr-2"></i>
-                              I use Zoom ‘cos I'm cool AF...
-                          </a>
-                      </div>
-                  </li>
-                  <li class=" mb-3">
-                      <div class="subheading mb-3">
-                          <a href="#skype">
-                              <i class="fab fa-lg fa-skype mr-2"></i>
-                              I use Skype ‘cos I'm old school...
-                          </a>
-                      </div>
-                  </li>
-                  <li class=" mb-3">
-                      <div class="subheading mb-3">
-                          <a href="#phone">
-                              <i class="fas fa-lg fa-phone-square-alt mr-2"></i>
-                              I use the telephone ‘cos I'm not a nerd...
-                          </a>
-                      </div>
-                  </li>
-              </ul>
+            <div id="booking-page">
+              <!-- this is where we will inject the interface -->
+            </div>
+            <script>window.SavvyCal=window.SavvyCal||function(){(SavvyCal.q=SavvyCal.q||[]).push(arguments)};</script>
+            <script async src="https://embed.savvycal.com/v1/embed.js"></script>
+            <script>
+              SavvyCal('init');
+              SavvyCal('inline', { link: 'chatwithal/book', selector: '#booking-page' });
+            </script>
           </div>
         </div>
       </div>
@@ -106,75 +88,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="zoom">
-      <div class="w-100">
-        <h2 class="mb-2">Book with Zoom</h2>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-0">
-          <div class="resume-content">
-            <p class="lead ">
-              <strong>You're so effortlessly cool – I love it.</strong> My schedule should have appeared in a fancy little box below. Just pick a time that works and BOOM you're in my diary.
-            </p>
-            <p class="lead">
-              Changed your mind about Zoom? <a href="#home">Start again</a>. Having issues? <a href="mailto:adrelliott@gmail.com">Email me</a>.
-            </p>
-          </div>
-        </div>
-        <div class="calendly">
-          <!-- Calendly inline widget begin -->
-          <div class="calendly-inline-widget" data-url="https://calendly.com/alelliott/zoom?hide_event_type_details=1&primary_color=3f5968" style="min-width:320px;height:670px;"></div>
-          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-          <!-- Calendly inline widget end -->
-        </div>
-      </div>
-    </section>
-
-        <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="skype">
-      <div class="w-100">
-        <h2 class="mb-2">Book with Skype</h2>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-0">
-          <div class="resume-content">
-            <p class="lead ">
-              <strong>So you're old school, eh? I like it.</strong> My schedule should have appeared in a fancy little box below. Just pick a time that works and BOOM you're in my diary.
-            </p>
-            <p class="lead">
-              Changed your mind about using Skype? <a href="#home">Start again</a>. Having issues? <a href="mailto:adrelliott@gmail.com">Email me</a>.
-            </p>
-          </div>
-        </div>
-        <div class="calendly">
-          <!-- Calendly inline widget begin -->
-          <div class="calendly-inline-widget" data-url="https://calendly.com/alelliott/skype?hide_event_type_details=1&primary_color=3f5968" style="min-width:320px;height:670px;"></div>
-          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-          <!-- Calendly inline widget end -->
-        </div>
-      </div>
-    </section>
-
-        <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="phone">
-      <div class="w-100">
-        <h2 class="mb-2">Book with a 'phone call</h2>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-0">
-          <div class="resume-content">
-            <p class="lead ">
-              <strong>You like the old dog-and-bone – that's fine by me!</strong> My schedule should have appeared in a fancy little box below. Just pick a time that works and BOOM you're in my diary.
-            </p>
-            <p class="lead">
-              Changed your mind about using the phone? <a href="#home">Start again</a>. Having issues? <a href="mailto:adrelliott@gmail.com">Email me</a>.
-            </p>
-          </div>
-        </div>
-        <div class="calendly">
-          <!-- Calendly inline widget begin -->
-          <div class="calendly-inline-widget" data-url="https://calendly.com/alelliott/phone?hide_event_type_details=1&primary_color=3f5968" style="min-width:320px;height:670px;"></div>
-          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-          <!-- Calendly inline widget end -->
-        </div>
-      </div>
-    </section>
+    
     
     <hr class="m-0 mb-3">
 
@@ -195,7 +109,8 @@
   <!-- Custom scripts for this template -->
   <script src="/assets/js/resume.min.js"></script>
 
+
+
 </body>
 
 </html>
-
